[package]
name = "open-opus"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.12", features = ["macros"] }
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.17.0", features = ["macros"] }
